2011-01-22  Ben Abbott  <bpabbott@mac.com>

	* plot/meshc.m: Add note: gnuplot does not support filled 3D patches,
	or mixing non-filled contours with filled surfaces.
	* plot/subplot.m: Set "box" to "on" by default (same as Matlab).
	* plot/cylinder.m: Remove console output from demo.

2011-01-22  Konstantinos Poulios  <logari81@googlemail.com>

	* plot/plotyy.m: Set box property to off to allow both y-axes colors
	to be visible for OpenGL backends.

2011-01-22  John W. Eaton  <jwe@octave.org>

	* plot/private/__scatter__.m: Don't accept "filled" as a color.
	* plot/scatter.m: Doc fix.
	Bug #32204.

2011-01-21  Konstantinos Poulios  <logari81@gmail.com>

	* plot/xlabel.m, plot/ylabel.m, plot/zlabel.m: Setting axis label
	color from axis color.

2011-01-20  Jordi Gutiérrez Hermoso  <jordigh@gmail.com>

	* image/imshow.m: Fix handling of clim and display_range so that
	images are more faithfully reproduced.

2011-01-20  Rik  <octave@nomad.inbox5.com>

	* scripts/image/imshow.m, scripts/image/saveimage.m,
	scripts/io/dlmwrite.m, scripts/io/strread.m,
	scripts/miscellaneous/license.m, scripts/optimization/glpk.m,
	scripts/plot/refreshdata.m, scripts/plot/shading.m,
	scripts/plot/slice.m, scripts/plot/surfl.m, scripts/plot/uimenu.m,
	scripts/statistics/base/mean.m, scripts/statistics/base/moment.m,
	scripts/strings/isstrprop.m: Prevent doubled quotes around @table
	items in Info.

2011-01-20  Rik  <octave@nomad.inbox5.com>

	* mkdoc: Mark all scripts as coming from 'scripts/' directory
	in Texinfo '@c func location' comments.

2011-01-20  Rik  <octave@nomad.inbox5.com>

	* scripts/linear-algebra/condest.m,
	scripts/linear-algebra/onenormest.m, scripts/linear-algebra/qzhess.m,
	scripts/polynomial/polyfit.m, scripts/special-matrix/pascal.m: Use
	non-breaking spaces between certain adjectives and their linked nouns
	in docstrings

2011-01-20  Rik  <octave@nomad.inbox5.com>

	* image/imread.m, image/imwrite.m, signal/periodogram.m,